[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/avatars/avatar_0.png" type="Texture" id=1]
[ext_resource path="res://scenes/avatarPreview.gd" type="Script" id=2]
[ext_resource path="res://textures/ui/avatar_selection.png" type="Texture" id=3]

[node name="TextureRect" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="selectionFrame" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 17.0
margin_bottom = 19.0
texture = ExtResource( 3 )
expand = true

[node name="Tween" type="Tween" parent="selectionFrame"]

[connection signal="gui_input" from="." to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureRect_mouse_exited"]
